Task5/admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              role: admin-back-end-api
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              role: admin-front-end
